# honzajavorek.cz

./: .gitignore  .travis.yml  0-pred-i-po-kristu.html  404.html  CNAME  INSTALL.md  LICENSE  LICENSE.MIT  Makefile  Pipfile  Procfile  README.markdown  README.md  TODO.markdown  TODO.md  afraid-of-freedom.html  alma-mater.html  anglictina-na-haku.html  ano-v-zime-snezi.html  api-k-ceskym-turistickym-mapam.html  aplikace-pro-android-ii.html  aplikace-pro-android.html  archives.html  autobus.html  bakalar.html  bakalarka.html  balada-o-zabe.html  barka.html  baterky.html  beeeeeeeee.html  benny-lava.html  bernard.html  blba.html  blog-v-novem.html  boj.html  brain-waves-of-the-friend.html  bulvy.html  byl-jsem-fit.html  castice.html  categories.html  (+385 more)
.circleci/: config.yml
.dependabot/: config.yml
.dvtv/: podcast.xml
.github/: dependabot.yml
author/: Honza Javorek.html  Honza Javorek10.html  Honza Javorek11.html  Honza Javorek12.html  Honza Javorek13.html  Honza Javorek14.html  Honza Javorek15.html  Honza Javorek16.html  Honza Javorek17.html  Honza Javorek18.html  Honza Javorek19.html  Honza Javorek2.html  Honza Javorek20.html  Honza Javorek21.html  Honza Javorek22.html  Honza Javorek23.html  Honza Javorek24.html  Honza Javorek25.html  Honza Javorek26.html  Honza Javorek27.html  Honza Javorek28.html  Honza Javorek29.html  Honza Javorek3.html  Honza Javorek30.html  Honza Javorek31.html  Honza Javorek32.html  Honza Javorek33.html  Honza Javorek34.html  Honza Javorek35.html  Honza Javorek36.html  Honza Javorek37.html  Honza Javorek38.html  Honza Javorek39.html  Honza Javorek4.html  Honza Javorek40.html  Honza Javorek41.html  Honza Javorek42.html  Honza Javorek43.html  Honza Javorek44.html  Honza Javorek45.html  (+22 more)
blog/: 0-pred-i-po-kristu.html  Pipfile  README.md  __init__.py  a-z-jakeho-duvodu-studujes-ty.html  afraid-of-freedom.html  alma-mater.html  anglictina-na-haku.html  ano-v-zime-snezi.html  api-k-ceskym-turistickym-mapam.html  aplikace-pro-android-ii.html  aplikace-pro-android.html  autobus.html  bakalar.html  bakalarka.html  balada-o-zabe.html  barka.html  baterky.html  beeeeeeeee.html  benny-lava.html  bernard.html  berslevucz-mi-neodeslali-kupon-a-neodpovidaji.html  blba.html  blog-v-novem.html  boj.html  brain-waves-of-the-friend.html  bulvy.html  byl-jsem-fit.html  castice.html  ceske-pojeti-zimy-je-jen-mentalni-retardace-moderni-doby.html  chcete-li-se-jednou-zivit-webdesignem-nechodte-delat-inzenyra-na-vut-fit.html  chemicky-big-beat.html  chorobna.html  chronic-mistake.html  citace-z-wikipedie.html  co-jsem-nepostrehl.html  co-s-hudbou.html  ctverecky.html  cucumis-sativus.html  cz-nebo-cs.html  (+304 more)
category/: blog.html  blog10.html  blog11.html  blog12.html  blog13.html  blog14.html  blog15.html  blog16.html  blog17.html  blog18.html  blog19.html  blog2.html  blog20.html  blog21.html  blog22.html  blog23.html  blog24.html  blog25.html  blog26.html  blog27.html  blog28.html  blog29.html  blog3.html  blog30.html  blog31.html  blog32.html  blog33.html  blog34.html  blog35.html  blog36.html  blog37.html  blog38.html  blog39.html  blog4.html  blog40.html  blog41.html  blog42.html  blog43.html  blog44.html  blog45.html  (+22 more)
config/: base.py  development.py  production.py
content/: 2007-08-13_hello-world.md  2007-08-15_internetova-radia-noveho-tisicileti.md  2007-08-16_listky-rostou-pomalu.md  2007-08-16_run-forrest-run.md  2007-08-22_exhausted.md  2007-08-27_nebavi-vas-nero.md  2007-08-29_el-laberinto-del-fauno.md  2007-08-30_png-a-internet-explorer.md  2007-09-01_morseovka.md  2007-09-01_okamzik.md  2007-09-03_boj.md  2007-09-05_problemy-neexistuji-i.md  2007-09-10_chemicky-big-beat.md  2007-09-23_jabber.md  2007-09-23_problemy-neexistuji-ii.md  2007-10-12_ziva-polivka.md  2007-10-19_barka.md  2007-10-19_problemy-neexistuji-iii-strach.md  2007-10-19_vanek.md  2007-10-31_jak-usetrit-2-mb-ram-nepouzivanim-wakoopa.md  2007-11-01_ty-ty-ty.md  2007-11-02_brain-waves-of-the-friend.md  2007-11-02_problemy-neexistuji-iv.md  2007-11-02_tyden-s-tucnaky.md  2007-11-09_problemy-neexistuji-v.md  2007-11-15_jsem-hybrid.md  2007-11-15_littlemaplenet.md  2007-11-16_problemy-neexistuji-vi.md  2007-11-17_jak-se-ucit.md  2007-11-20_saliny-lednicky-a-vubec.md  2007-12-09_bernard.md  (+648 more)
(+2074 files in other folders)
